// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(foo)",
    }
  }
>
  <div>
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      />
    </div>
  </div>
</div>
`;

exports[`renders multiple images 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(foo)",
    }
  }
>
  <div>
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      >
        <a
          data-stylename="other"
          href="bar"
          key="bar"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(bar)",
              }
            }
          />
        </a>
        <a
          data-stylename="other"
          href="baz"
          key="baz"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(baz)",
              }
            }
          />
        </a>
        <a
          data-stylename="other"
          href="bonk"
          key="bonk"
          target="_blank"
        >
          <div
            style={
              Object {
                "backgroundImage": "url(bonk)",
              }
            }
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
